--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,9 +1,11 @@
 .main {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+  max-width: 100%;
+  padding: 4rem 6vw;
   display: flex;
+  display: -ms-flexbox;
   flex-direction: column;
+  -ms-flex-direction: column;
   justify-content: center;
   align-items: center;
 }
