--- a/components/design-card/designcard.module.css
+++ b/components/design-card/designcard.module.css
@@ -1,49 +1,58 @@
 .card {
-    box-shadow: var(--box-shadow);
-    -webkit-box-shadow: var(--box-shadow);
-    border-radius: 10px;
-    display: flex;
-    display: -ms-flexbox;
+  box-shadow: var(--box-shadow);
+  -webkit-box-shadow: var(--box-shadow);
+  border-radius: 10px;
+  cursor: pointer;
+  transform: translateY(0);
+  -webkit-transform: translateY(0);
+  transition: 0.2s ease-in-out;
+  -webkit-transition: 0.2s ease-in-out;
+}
+
+.card:hover,
+.card:focus-within {
+  transform: translateY(-10px);
+  -webkit-transform: translateY(-10px);
 }
 
 .card .image {
-    height: 250px;
-    overflow: hidden;
-    overflow: -moz-hidden-unscrollable;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    margin-right: 1rem;
+  height: 300px;
+  overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 
 .card .image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    -o-object-fit: cover;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -o-object-fit: cover;
 }
 
 .card .body {
-    padding: 0.8rem;
+  padding: 0.8rem;
 }
 
 .card .body .design__data h3 {
-    color: teal;
-    margin-bottom: 0.6rem;
-    font-size: 30px;
+  color: teal;
+  margin-bottom: 0.6rem;
+  font-size: 22px;
+  font-weight: 600;
 }
 
 .card .design__author {
-    display: flex;
-    display: -ms-flexbox;
-    padding-top: 1rem;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
-    align-items: center;
+  display: flex;
+  display: -ms-flexbox;
+  padding-top: 1rem;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  align-items: center;
 }
 
 .card .design__author img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    margin-right: 0.8rem;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-right: 0.8rem;
 }
