--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -53,3 +53,15 @@
   grid-template-columns: 1fr 1fr 1fr;
   gap: 0.8rem;
 }
+
+@media screen and (max-width: 900px) {
+  .grid__layout {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .grid__layout {
+    grid-template-columns: 1fr;
+  }
+}
